Revert "changed pdfBase64 / documentBase64String to base64."
This reverts commit a6f2ffbd488055cca72ad76eecaab1304b39ead2.
